--- a/AplicacionWebAspNet/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
+++ b/AplicacionWebAspNet/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
@@ -251,15 +251,25 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BetsController.cs" />
+    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MarketsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AbstractRepository.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Bets.cs" />
+    <Compile Include="Models\BetsRepository.cs" />
+    <Compile Include="Models\Events.cs" />
+    <Compile Include="Models\EventsRepository.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Markets.cs" />
+    <Compile Include="Models\MarketsRepository.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Models\UsersRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
