--- a/AplicacionWebAspNet/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
+++ b/AplicacionWebAspNet/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AbstractController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BetsController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
