Cambio la nomenclatura de las clases de plurar a singular

--- a/AplicacionWebAspNet/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
+++ b/AplicacionWebAspNet/PlaceMyBet/PlaceMyBet/PlaceMyBet.csproj
@@ -252,11 +252,11 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AbstractController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\BetsController.cs" />
-    <Compile Include="Controllers\EventsController.cs" />
+    <Compile Include="Controllers\BetController.cs" />
+    <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\MarketsController.cs" />
-    <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Controllers\MarketController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -264,15 +264,15 @@
     <Compile Include="Models\AbstractRepository.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Bets.cs" />
-    <Compile Include="Models\BetsRepository.cs" />
-    <Compile Include="Models\Events.cs" />
-    <Compile Include="Models\EventsRepository.cs" />
+    <Compile Include="Models\Bet.cs" />
+    <Compile Include="Models\BetRepository.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\EventRepository.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\Markets.cs" />
-    <Compile Include="Models\MarketsRepository.cs" />
-    <Compile Include="Models\Users.cs" />
-    <Compile Include="Models\UsersRepository.cs" />
+    <Compile Include="Models\Market.cs" />
+    <Compile Include="Models\MarketRepository.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
